@@ -46,7 +46,7 @@ goto error_finish
 :: Check GRIDGAIN_HOME.
 :checkGridGainHome1
 if defined GRIDGAIN_HOME goto checkGridGainHome2
-    pushd "%~dp0"/../.. :: Will be replaced by pushd "%~dp0"/..
+    pushd "%~dp0"/../.. &:: Will be replaced by pushd "%~dp0"/..
     set GRIDGAIN_HOME=%CD%
     popd
 
@@ -75,7 +75,10 @@ if exist "%GRIDGAIN_HOME%\config" goto checkGridGainHome4
 ::
 :: Set SCRIPTS_HOME - base path to scripts.
 ::
-set SCRIPTS_HOME=%GRIDGAIN_HOME%\os\bin :: Will be replace by SCRIPTS_HOME=${GRIDGAIN_HOME_TMP}\bin in release.
+set SCRIPTS_HOME=%GRIDGAIN_HOME%\os\bin &:: Will be replaced by SCRIPTS_HOME=${GRIDGAIN_HOME}\bin in release.
+
+:: Remove trailing spaces
+for /l %%a in (1,1,31) do if /i "%SCRIPTS_HOME:~-1%" == " " set SCRIPTS_HOME=%SCRIPTS_HOME:~0,-1%
 
 if /i "%SCRIPTS_HOME%\" == "%~dp0" goto setProgName
     echo %0, WARN: GRIDGAIN_HOME environment variable may be pointing to wrong folder: %GRIDGAIN_HOME%
@@ -93,7 +96,7 @@ if "%OS%" == "Windows_NT" set PROG_NAME=%~nx0%
 :: Set GRIDGAIN_LIBS
 ::
 call "%SCRIPTS_HOME%\include\setenv.bat"
-call "%SCRIPTS_HOME%\include\target-classpath.bat" :: Will be removed in release.
+call "%SCRIPTS_HOME%\include\target-classpath.bat" &:: Will be removed in release.
 set CP=%GRIDGAIN_LIBS%
 
 ::
@@ -145,16 +148,7 @@ if "%JMX_PORT%" == "" (
 ::
 :: ADD YOUR/CHANGE ADDITIONAL OPTIONS HERE
 ::
-set BASE_JVM_OPTS=-Xms1g -Xmx1g -server -XX:+AggressiveOpts
-
-if "%JVM_OPTS%" == "" (
-    :: Hadoop needs class unloading enabled and large size of perm space.
-    if defined GRIDGAIN_HADOOP_CLASSPATH (
-        set JVM_OPTS=%BASE_JVM_OPTS% -XX:MaxPermSize=350m -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSClassUnloadingEnabled -XX:+ParallelRefProcEnabled -XX:+ExplicitGCInvokesConcurrentAndUnloadsClasses
-    ) else (
-        set JVM_OPTS=%BASE_JVM_OPTS%
-    )
-)
+if "%JVM_OPTS%" == "" set JVM_OPTS=-Xms1g -Xmx1g -server -XX:+AggressiveOpts -XX:MaxPermSize=256m
 
 ::
 :: Uncomment the following GC settings if you see spikes in your throughput due to Garbage Collection.
